--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en" className="dark" >
+<html lang="en" className="dark">
 
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/svg+xml" href="/logo-estellle.png" />
+  <link rel="icon" type="image/png" href="/assets/logo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
